--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,7 @@
   <script src="bower_components/jquery/dist/jquery.min.js" type="text/javascript" />
   <script src="bower_components/underscore/underscore-min.js" type="text/javascript" />
   <script src="bower_components/backbone/backbone.js" type="text/javascript" />
+  <script src="bower_components/backbone.localstorage/backbone.localStorage.js" type="text/javascript" />
   <script src="javascripts/models/todo.js" type="text/javascript" />
   <script src="javascripts/collections/todos.js" type="text/javascript" />
   <script src="javascripts/views/todos.js" type="text/javascript" />
